# bacdive

./: Cargo.toml  README.md  bacdive-README.md  main.rs
bacdive-analyzer-src/: designation.rs  metanalysis.rs  metargs.rs  strain.rs
src/: args.rs  bacdive.rs  designation.rs  designationlist.rs  idlist.rs  idsearch.rs  idwrite.rs  main.rs  species.rs  specieslist.rs  specieswrite.rs  strain.rs  strainheader.rs  strainnumber.rs  strainwrite.rs  structfile.rs  uniqueid.rs  uniquespecies.rs  uniquestrain.rs  webmine.rs
