[package]
name = "bacdive"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"
description = "bacdive rust analyzer for microbial genomics"
homepage = "https://github.com/sciencegenome/bacdive"
repository = "https://github.com/sciencegenome/bacdive"
[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
reqwest = "0.12.12"
rusqlite = "0.33.0"
scraper = "0.22.0"
select = "0.6.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tabled = "0.18.0"
