[package]
name = "bacdive"
version = "0.2.0"
edition = "2021"
readme = "README.md"
license = "MIT"
description = "bacdive rust analyzer for microbial genomics"
homepage = "https://github.com/genomicssport/bacdive"
repository = "https://github.com/genomicssport/bacdive"
[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
figlet-rs = "0.1.5"
reqwest = { version = "0.12.23", features = ["blocking"] }
rusqlite = "0.33.0"
scraper = { version = "0.22.0", features = ["errors", "getopts", "main"] }
select = "0.6.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tabled = "0.18.0"
tokio = { version = "1.47.1", features = ["full"] }
